# DPronix

./: .gitignore  BUILDING.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  DESIGN.md  GITHUB_SETUP_GUIDE.md  GUIDE.md  Makefile  README.md  README_EN.md  SECURITY.md  dpronix.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  desktop.yml  release.yml
.reasonix/: desktop-topic-title-sources.json
crates/deepnova-core/: Cargo.toml
crates/deepnova-core/src/memory/: skill.rs
crates/deepnova-desktop/frontend/: package-lock.json  package.json
crates/deepseeknova-agent/: Cargo.toml
crates/deepseeknova-checkpoint/: Cargo.toml
crates/deepseeknova-cli/: Cargo.toml
crates/deepseeknova-cli/examples/: quickstart.rs
crates/deepseeknova-cli/src/: init.rs
crates/deepseeknova-config/src/: lib.rs
crates/deepseeknova-context/: Cargo.toml  README.md
crates/deepseeknova-context/src/: lib.rs
crates/deepseeknova-context/tests/: memory_integration.rs
crates/deepseeknova-core/src/memory/: lifecycle.rs
crates/deepseeknova-desktop/: Cargo.toml
crates/deepseeknova-desktop/frontend/: package-lock.json  package.json
crates/deepseeknova-desktop/frontend/src/: App.tsx  styles.css  types.ts
crates/deepseeknova-desktop/frontend/src/components/: AppChrome.tsx  ApprovalCard.tsx  CommandPalette.tsx  Composer.tsx  ContextPanel.tsx  EffortSwitcher.tsx  KnowledgeBaseModal.tsx  MarkdownRenderer.tsx  MemoryPanel.tsx  MessageItem.tsx  ModeBar.tsx  ModelSelector.tsx  ReasoningCard.tsx  RightPanel.tsx  SettingsModal.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  TodoPanel.tsx  ToolCard.tsx  TracePanel.tsx  Transcript.tsx  Welcome.tsx  WorkspacePanel.tsx
crates/deepseeknova-desktop/frontend/src/components/editors/: CodeViewer.tsx  DiffView.tsx
crates/deepseeknova-desktop/frontend/src/components/settings/: DiagnosticsSettings.tsx  GeneralSettings.tsx  Shared.tsx  SubAgentsSettings.tsx
crates/deepseeknova-desktop/frontend/src/i18n/: index.ts
crates/deepseeknova-desktop/frontend/src/store/: index.ts
crates/deepseeknova-desktop/src/: lib.rs
crates/deepseeknova-desktop/src/commands/: billing.rs  core.rs  diagnostics.rs  hooks.rs  knowledge.rs  mcp.rs  memory.rs  misc.rs  mod.rs  network.rs  permissions.rs  sandbox.rs  sessions.rs  settings.rs  skills.rs  subagents.rs  tabs.rs  workspace.rs
crates/deepseeknova-event/: Cargo.toml
crates/deepseeknova-mcp/: Cargo.toml
crates/deepseeknova-orch/: Cargo.toml
crates/deepseeknova-orch/src/: lib.rs  progress.rs
crates/deepseeknova-permission/: Cargo.toml
crates/deepseeknova-permission/src/: lib.rs
crates/deepseeknova-provider/: Cargo.toml
crates/deepseeknova-runtime/: Cargo.toml
crates/deepseeknova-sandbox/: Cargo.toml
crates/deepseeknova-security/: Cargo.toml
crates/deepseeknova-serve/: Cargo.toml
crates/deepseeknova-skills/: Cargo.toml
crates/deepseeknova-store/: Cargo.toml
crates/deepseeknova-tools/: Cargo.toml
crates/deepseeknova-tui/: Cargo.toml
crates/dpronix-agent/: Cargo.toml
crates/dpronix-agent/src/: agent.rs  coordinator.rs  lib.rs  memory.rs  test_utils.rs
crates/dpronix-agent/src/budget/: controller.rs
crates/dpronix-agent/tests/: runner_contract.rs
crates/dpronix-checkpoint/: Cargo.toml
crates/dpronix-checkpoint/src/: lib.rs
crates/dpronix-cli/: Cargo.toml
crates/dpronix-cli/examples/: quickstart.rs
crates/dpronix-cli/src/: chat.rs  init.rs  main.rs
crates/dpronix-config/src/: lib.rs
crates/dpronix-context/: Cargo.toml
crates/dpronix-context/src/: lib.rs
crates/dpronix-context/tests/: memory_integration.rs
crates/dpronix-core/src/: registry.rs
crates/dpronix-core/src/prefix/: controller.rs
crates/dpronix-desktop/: Cargo.toml  tauri.conf.json
crates/dpronix-desktop/frontend/: package-lock.json  package.json
crates/dpronix-desktop/frontend/src/: App.tsx  bridge.ts  styles.css  types.ts
crates/dpronix-desktop/frontend/src/components/: ContextPanel.tsx  MessageItem.tsx  SettingsPanel.tsx  SidebarPanel.tsx  StatusBar.tsx  ThreadCards.tsx  TitleBar.tsx  Transcript.tsx
crates/dpronix-desktop/src/: commands.rs  lib.rs
crates/dpronix-event/: Cargo.toml
crates/dpronix-event/src/: lib.rs
crates/dpronix-mcp/: Cargo.toml
crates/dpronix-mcp/src/: adapter.rs  connection.rs  lib.rs  types.rs
crates/dpronix-orch/: Cargo.toml
crates/dpronix-orch/src/: lib.rs  memory.rs  planner.rs  swarm.rs  types.rs
crates/dpronix-permission/: Cargo.toml
crates/dpronix-permission/src/: lib.rs
crates/dpronix-provider/: Cargo.toml
crates/dpronix-provider/src/: lib.rs  openai.rs  types.rs
crates/dpronix-provider/src/telemetry/: exporter.rs
crates/dpronix-runtime/: Cargo.toml
crates/dpronix-runtime/src/: lib.rs
crates/dpronix-sandbox/: Cargo.toml
crates/dpronix-sandbox/src/: lib.rs
crates/dpronix-security/: Cargo.toml
crates/dpronix-security/src/: path.rs
crates/dpronix-serve/: Cargo.toml
crates/dpronix-serve/src/: lib.rs
crates/dpronix-serve/tests/: integration.rs
crates/dpronix-skills/: Cargo.toml
crates/dpronix-skills/src/: lib.rs  loader.rs
crates/dpronix-store/: Cargo.toml
crates/dpronix-store/src/: lib.rs
crates/dpronix-tools/: Cargo.toml
crates/dpronix-tools/src/: fs.rs  grep.rs  lib.rs
crates/dpronix-tools/tests/: integration.rs  security_path.rs
crates/dpronix-tui/: Cargo.toml
crates/dpronix-tui/src/: lib.rs
scripts/: bump-version.sh  patch-deps.py
