[package]
name = "deepseeknova-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI frontend for the deepseeknova agent framework with chat, plan, serve, and setup subcommands."
readme = "README.md"
documentation = "https://docs.rs/deepseeknova-cli/0.4.0"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
deepseeknova-core = { workspace = true }
deepseeknova-config = { workspace = true }
deepseeknova-provider = { workspace = true }
deepseeknova-agent = { workspace = true }
deepseeknova-tools = { workspace = true }
deepseeknova-runtime = { workspace = true }
deepseeknova-skills = { workspace = true }
deepseeknova-serve = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
deepseeknova-security = { workspace = true }
deepseeknova-mcp = { workspace = true }
deepseeknova-orch = { workspace = true }
serde_json = { workspace = true }
