[package]
name = "deepseeknova-orch"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-agent orchestration: GOAP planning, swarm coordination, and agent federation for DeepSeek-V4."
readme = "README.md"
documentation = "https://docs.rs/deepseeknova-orch/0.4.0"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
deepseeknova-core = { workspace = true }
deepseeknova-agent = { workspace = true }
deepseeknova-provider = { workspace = true }
deepseeknova-config = { workspace = true }
deepseeknova-tools = { workspace = true }
deepseeknova-event = { workspace = true }
