[package]
name = "deepseeknova-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Composition root wiring registry, context, event bus, permission, security, and LLM provider into an agent runtime."
readme = "README.md"
documentation = "https://docs.rs/deepseeknova-runtime/0.4.0"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
deepseeknova-core = { workspace = true }
deepseeknova-config = { workspace = true }
deepseeknova-provider = { workspace = true }
deepseeknova-agent = { workspace = true }
deepseeknova-tools = { workspace = true }
deepseeknova-permission = { workspace = true }
deepseeknova-context = { workspace = true }
deepseeknova-event = { workspace = true }
deepseeknova-security = { workspace = true }
